refactor, add yoga-nen-tang

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -30,8 +30,8 @@
 }
 
 .btn--buy {
-  background-color: darken(white, 10%);
-  color: #5fad8e;
+  background-color: #5fad8e;
+  color: white;
   border-radius: 0;
   font-size: 0.8em;
   padding: 0.5em 1em;
