--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,3 +46,26 @@
 .archive__item-body {
   text-align: left !important;
 }
+
+// go to the top of the page button
+#goTopBtn {
+  display: none; /* Hidden by default */
+  position: fixed;
+  bottom: 40px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #5fad8e;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50%;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  transition: background 0.3s ease;
+}
+
+#goTopBtn:hover {
+  background-color: #3b8f74;
+}
