--- a/_includes/quiz_utils.html
+++ b/_includes/quiz_utils.html
@@ -143,7 +143,7 @@
 // ============================================
 // GOOGLE SPREADSHEET INFORMATION
 // ============================================
-const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbz_WbcRlYdYNjjf7074nqySGvBnQtFQDpX49yV53it9zMzls11YRILnNfj16IuZNiBz/exec';
+const GOOGLE_SCRIPT_URL = "{{ site.data.secrets.google_script_url }}";
 
 // ============================================
 // QUIZ CONFIGURATION - ADD/REMOVE QUESTIONS HERE
