--- a/_includes/feature_row_custom_text_first.html
+++ b/_includes/feature_row_custom_text_first.html
@@ -10,67 +10,40 @@
     <div class="feature__item{% if include.type %}--{{ include.type }}{% endif %}">
       <div class="archive__item">
 
-        {% if include.text_first %}
-          <div class="archive__item-body">
-            {% if f.title %}
-              <h2 class="archive__item-title">{{ f.title }}</h2>
-            {% endif %}
+        <div class="archive__item-body">
+          {% if f.title %}
+            <h2 class="archive__item-title">{{ f.title }}</h2>
+          {% endif %}
 
-            {% if f.excerpt %}
-              <div class="archive__item-excerpt">
-                {{ f.excerpt | markdownify }}
-              </div>
-            {% endif %}
+          {% if f.image_path %}
+            <div class="archive__item-teaser">
+              <img src="{{ f.image_path | relative_url }}"
+                   alt="{% if f.alt %}{{ f.alt }}{% endif %}"
+                   style="width: 100%; height: auto; display: block;">
+              {% if f.image_caption %}
+                <span class="archive__item-caption">{{ f.image_caption | markdownify | remove: "<p>" | remove: "</p>" }}</span>
+              {% endif %}
+            </div>
+          {% endif %}
 
-            {% if f.url %}
-              <p><a href="{{ f.url | relative_url }}" class="btn {{ f.btn_class }}">{{ f.btn_label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a></p>
-            {% endif %}
+          {% if f.excerpt %}
+            <div class="archive__item-excerpt">
+              {{ f.excerpt | markdownify }}
+            </div>
+          {% endif %}
 
-            {% if f.buttons %}
-              <p>
-                  {% for button in f.buttons %}
-                      <a href="{{ button.url | relative_url }}" class="btn {{ button.class | default: 'btn--primary' }}">{{ button.label }}</a>
-                  {% endfor %}
-              </p>
-            {% endif %}
-          </div>
-        {% endif %}
+          {% if f.url %}
+            <p><a href="{{ f.url | relative_url }}" class="btn {{ f.btn_class }}">{{ f.btn_label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a></p>
+          {% endif %}
 
-        {% if f.image_path %}
-          <div class="archive__item-teaser">
-            <img src="{{ f.image_path | relative_url }}"
-                 alt="{% if f.alt %}{{ f.alt }}{% endif %}">
-            {% if f.image_caption %}
-              <span class="archive__item-caption">{{ f.image_caption | markdownify | remove: "<p>" | remove: "</p>" }}</span>
-            {% endif %}
-          </div>
-        {% endif %}
-
-        {% unless include.text_first %}
-          <div class="archive__item-body">
-            {% if f.title %}
-              <h2 class="archive__item-title">{{ f.title }}</h2>
-            {% endif %}
-
-            {% if f.excerpt %}
-              <div class="archive__item-excerpt">
-                {{ f.excerpt | markdownify }}
-              </div>
-            {% endif %}
-
-            {% if f.url %}
-              <p><a href="{{ f.url | relative_url }}" class="btn {{ f.btn_class }}">{{ f.btn_label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a></p>
-            {% endif %}
-
-            {% if f.buttons %}
-              <p>
-                  {% for button in f.buttons %}
-                      <a href="{{ button.url | relative_url }}" class="btn {{ button.class | default: 'btn--primary' }}">{{ button.label }}</a>
-                  {% endfor %}
-              </p>
-            {% endif %}
-          </div>
-        {% endunless %}
+          {% if f.buttons %}
+            <p>
+                {% for button in f.buttons %}
+                    <a href="{{ button.url | relative_url }}" class="btn {{ button.class | default: 'btn--primary' }}">{{ button.label }}</a>
+                {% endfor %}
+            </p>
+          {% endif %}
+        </div>
 
       </div>
     </div>
