--- a/_includes/feature_row_custom_text_first.html
+++ b/_includes/feature_row_custom_text_first.html
@@ -10,22 +10,23 @@
     <div class="feature__item{% if include.type %}--{{ include.type }}{% endif %}">
       <div class="archive__item">
 
-        <div class="archive__item-body">
-          {% if f.title %}
+        {% if f.title %}
+          <div class="archive__item-body">
             <h2 class="archive__item-title">{{ f.title }}</h2>
-          {% endif %}
+          </div>
+        {% endif %}
 
-          {% if f.image_path %}
-            <div class="archive__item-teaser">
-              <img src="{{ f.image_path | relative_url }}"
-                   alt="{% if f.alt %}{{ f.alt }}{% endif %}"
-                   style="width: 100%; height: auto; display: block;">
-              {% if f.image_caption %}
-                <span class="archive__item-caption">{{ f.image_caption | markdownify | remove: "<p>" | remove: "</p>" }}</span>
-              {% endif %}
-            </div>
-          {% endif %}
+        {% if f.image_path %}
+          <div class="archive__item-teaser">
+            <img src="{{ f.image_path | relative_url }}"
+                 alt="{% if f.alt %}{{ f.alt }}{% endif %}">
+            {% if f.image_caption %}
+              <span class="archive__item-caption">{{ f.image_caption | markdownify | remove: "<p>" | remove: "</p>" }}</span>
+            {% endif %}
+          </div>
+        {% endif %}
 
+        <div class="archive__item-body">
           {% if f.excerpt %}
             <div class="archive__item-excerpt">
               {{ f.excerpt | markdownify }}
